[package]
name = "ryubot-web"
version = "0.1.0"
authors = ["Joinemm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0.0"
actix-service = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.10", features = ["json"] }
md5 = "0.7"
rand= "0.7"
kankyo = "0.3"
env_logger = "0.7"
tera = "1.5"
log = "0.4"

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = [ "runtime-tokio", "macros", "postgres"]